<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addPhotoLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="4dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/userDetailsGL10Percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.1" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/userDetailsGL30Percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.3" />

                <ImageView
                    android:id="@+id/userPhoto"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/user_photo"
                    app:layout_constraintBottom_toBottomOf="@+id/userDetailsGL30Percent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userDetailsGL10Percent"
                    app:srcCompat="@drawable/circle_shape_background" />

                <TextView
                    android:id="@+id/name"
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle1.Opacity90Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/userPhoto"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.25"
                    tools:text="@string/first_name_last_name" />

                <TextView
                    android:id="@+id/dob"
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle1.Opacity90Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.25"
                    tools:text="@string/date_of_birth" />

                <TextView
                    android:id="@+id/phoneNumber"
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle1.Opacity90Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/dob"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.25"
                    tools:text="@string/phone_number" />

                <TextView
                    android:id="@+id/gender"
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle1.Opacity90Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.25"
                    tools:text="@string/gender" />

                <TextView
                    android:id="@+id/location"
                    style="@style/TextAppearance.MdcTypographyStyles.Subtitle1.Opacity90Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/gender"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.25"
                    tools:text="@string/city" />

                <TextView
                    android:id="@+id/email"
                    style="@style/TextAppearance.MdcTypographyStyles.Body2.Opacity90Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_marginTop="64dp"
                    app:layout_constraintTop_toBottomOf="@+id/location"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.25"
                    tools:text="@string/email" />

                <TextView
                    android:id="@+id/username"
                    style="@style/TextAppearance.MdcTypographyStyles.Body2.Opacity90Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.25"
                    tools:text="@string/username"/>

                <TextView
                    android:id="@+id/password"
                    style="@style/TextAppearance.MdcTypographyStyles.Body2.Opacity90Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/username"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.25"
                    tools:text="@string/password"/>


                <TextView
                    android:id="@+id/uuid"
                    style="@style/TextAppearance.MdcTypographyStyles.Body2.Opacity90Primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.25"
                    tools:text="@string/uuid"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
